-- FESTIO 3차 고도화: 점포 대기 시간 수동/자동 하이브리드 관리를 위한 테이블 세팅

-- 1. 상점별 설정 정보 저장 테이블 (수동 대기 시간 등)
CREATE TABLE IF NOT EXISTS public.shop_store_settings (
    store_name TEXT PRIMARY KEY,
    manual_wait_time INTEGER DEFAULT null,
    is_manual_active BOOLEAN DEFAULT false,
    updated_at TIMESTAMP WITH TIME ZONE DEFAULT NOW()
);

-- 2. 대기 시간 변동 이력 로그 테이블
CREATE TABLE IF NOT EXISTS public.store_wait_time_logs (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    store_name TEXT REFERENCES public.shop_store_settings(store_name) ON DELETE CASCADE,
    old_time INTEGER,
    new_time INTEGER,
    change_reason TEXT, -- 'MANUAL_OVERRIDE' or 'AUTO_CALC'
    changed_by TEXT,    -- 스태프 ID 또는 이메일
    created_at TIMESTAMP WITH TIME ZONE DEFAULT NOW()
);

-- RLS (Row Level Security) 정책 추가 (필요 시 주석 해제하여 스태프만 접근하게 설정 가능)
-- ALTER TABLE public.shop_store_settings ENABLE ROW LEVEL SECURITY;
-- CREATE POLICY "Allow public read" ON public.shop_store_settings FOR SELECT USING (true);
-- CREATE POLICY "Allow authenticated update" ON public.shop_store_settings FOR UPDATE USING (auth.role() = 'authenticated');
